--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>HELLO WORLD</h1>
+    <img src="https://media.tenor.com/9ItR8nSuxE0AAAAC/thumbs-up-computer.gif" alt="">
 </body>
 </html>
